# dunder-mifflin-play

./: .gitignore  LICENSE  README.md  alpha.ipynb  docker-compose.yml  gemini_models.md  main.py  plan.md  project_blueprint.md  project_setup.md  pyproject.toml  tools_reference.md
ai_engine_deployment/: deploy_michael.py
dunder-mifflin-mcp/: _server.py  _test_server.py  pyproject.toml
dunder_mifflin_mcp/: Dockerfile  config.py  pyproject.toml  server.py
dunder_mifflin_mcp/db/: models.py
dunder_mifflin_mcp/tools/common/: tools.py
dunder_mifflin_mcp/tools/holly_flax/: temp_agency_tools.py
dunder_mifflin_mcp/tools/holly_the_living_breathing_angel/: princing_tools.py
dunder_mifflin_mcp/tools/william_charles_schneider/: security_tools.py
michael_scott/: agent.py
scranton/agents/: .dockerignore  Dockerfile  agents_deploy.sh  requirements.txt  server.py
scranton/agents/conference_room/: agent.py  config.py  prompts.py
scranton/agents/creed_bratton/: agent.py  config.py  prompts.py
scranton/agents/creed_bratton/william_charles_schneider/: agent.py  config.py  prompts.py
scranton/agents/dwight_schrute/: agent.py  config.py  prompts.py  requirements.txt
scranton/agents/dwight_schrute/tools/: db_tools.py
scranton/agents/erin_hannon/: agent.py  config.py  prompts.py
scranton/agents/holly_flax/: Dockerfile  agent.py  config.py  prompts.py  requirements.txt  server.py
scranton/agents/holly_flax/holly_the_living_breathing_angel/: agent.py  config.py  prompts.py
scranton/agents/jim_halpert/: agent.py  config.py  prompts.py
scranton/agents/jim_halpert/big_tuna/: agent.py  config.py  prompts.py
scranton/agents/jim_halpert/golden_face/: agent.py  config.py  prompts.py
scranton/agents/jim_halpert/jimothy/: agent.py  config.py  prompts.py
scranton/agents/michael_scarn/: agent.py  config.py  prompts.py
scranton/agents/michael_scott/: agent.py  config.py  prompts.py
scranton/agents/michael_scott/a2a_communication/: a2a_client.py
scranton/agents/michael_scott/date_mike/: agent.py  config.py  prompts.py
scranton/agents/michael_scott/michael_scarn/: agent.py  config.py  prompts.py
scranton/agents/michael_scott/michael_the_magic/: agent.py  config.py  prompts.py
scranton/agents/michael_scott/prison_mike/: agent.py  config.py  prompts.py
scranton/agents/pam_beesly/: __init__.py  agent.py  config.py  helper.py  prompts.py  tools.py
scranton/agents/pam_beesly/pam_cake/: agent.py  config.py  prompts.py
scranton/agents/pam_beesly/pam_casso/: agent.py  config.py  prompts.py
scranton/agents/pam_beesly/pamela/: agent.py  config.py  (+1 more)
scranton/agents/ryan_howard/: agent.py  config.py  prompts.py
scripts/: agent_config.py  agent_models.py  deploy_agent.py
temp_agency/: ryan_deploy.sh  temp_agency_deploy.sh
temp_agency/app/: .dockerignore  Dockerfile  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
temp_agency/app/api/: __init__.py  agents.py  health.py
temp_agency/app/db/: __init__.py  postgres.py
temp_agency/app/models/: __init__.py  models.py
temp_agency/app/services/: __init__.py  agent_service.py
temp_agency/ryan_howard/: .env.example  Dockerfile  README.md  a2a_api_documentation.md  a2a_server.py  agent.py  config.py  main.py  prompts.py  pyproject.toml
temp_agency/ryan_howard/a2a_configs/: agent_a2a_configs.py  agent_executor.py
temp_agency/ryan_howard/authentication/: auth.py
temp_agency/ryan_howard/tools/: data_science_tools.py
web_app/: .dockerignore  Dockerfile  app.py  requirements.txt
web_app/static/css/: style.css
web_app/static/js/: script.js
web_app/templates/: base.html  chat.html  home.html  login.html
(+3 files in other folders)
