[project]
name = "dunder-mifflin-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.8",
    "fastapi>=0.115.13",
    "fastmcp>=2.8.1",
    "flask>=3.1.1",
    "google-adk>=1.3.0",
    "google-cloud-aiplatform>=1.97.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.20.0",
    "litellm>=1.72.7",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "faker>=37.4.0",
    "ipykernel>=6.29.5",
    "numpy>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
]
mcp = [
    "fastmcp>=2.8.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
]

[tool.uv.workspace]
members = [
    "dunder-mifflin-mcp",
]


# dependencies = [
#     "google-adk>=1.3.0",
#     "google-cloud-aiplatform[adk,agent-engines]>=1.97.0",
#     "google-genai>=1.20.0",
#     "httpx>=0.28.1",
#     "pandas>=2.3.0",
#     "psycopg2-binary>=2.9.10",
#     "python-dotenv>=1.1.0",
#     "scikit-learn>=1.7.0",
# ]

# dependencies = [
#     "a2a-sdk>=0.2.7",
#     "dunder-mifflin-shared",
#     "fastapi>=0.115.12",
#     "google-adk>=1.2.1",
#     "httpx>=0.28.1",
#     "litellm>=1.72.6.post1",
#     "matplotlib>=3.10.3",
#     "mcp[cli]>=1.9.0",
#     "mesop>=1.0.1",
#     "mlflow>=3.1.0",
#     "pandas>=2.2.3",
#     "passlib>=1.7.4",
#     "psycopg2-binary>=2.9.10",
#     "pydantic>=2.11.4",
#     "pymongo>=4.13.0",
#     "python-dotenv>=1.1.0",
#     "python-jose>=3.5.0",
#     "requests>=2.32.3",
#     "sqlalchemy>=2.0.41",
#     "uvicorn>=0.34.2",
# ]