[project]
name = "temp-agency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "a2a-sdk>=0.2.5",
    "uvicorn>=0.34.2",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
]